recipes and all of that
recipes and blast powder

--- a/src/main/resources/assets/mint/lang/en_us.json
+++ b/src/main/resources/assets/mint/lang/en_us.json
@@ -1,5 +1,6 @@
 {
 	"item.mint.ballpeen_hammer": "Ball-Peen Hammer",
+	"item.mint.blast_powder": "Blast Powder",
 	
 	"item.mint.copper_coin": "Copper Coin",
 	"item.mint.iron_coin": "Iron Coin",
